useLockBodyScrolll, closeNavbar on body click, put navVisible useState in useContext, position navbar, fix local storage new recipe

--- a/src/components/_app.scss
+++ b/src/components/_app.scss
@@ -48,7 +48,7 @@ code {
   color: antiquewhite;
 }
 
-.main {
+main {
   @include desktop {
     grid-row: 2;
     grid-column: 2 / span 3;
