--- a/src/components/topline/searchbar/_searchbar.scss
+++ b/src/components/topline/searchbar/_searchbar.scss
@@ -4,7 +4,7 @@
   margin: 1rem 0;
 }
 
-input {
+.searchbar input {
   margin-top: 0.2rem;
   height: 31px;
   width: 100%;
